--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "c:\\Users\\nikov\\OneDrive\\Niko\\Code\\AdventOfCode\\aoc2019\\venv\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\nikov\\OneDrive\\Niko\\Code\\AdventOfCode\\aoc2019\\venv\\Scripts\\python.exe",
+    "python.linting.enabled": true
 }
